[package]
name = "keplr_wasm_demo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.92"
console_error_panic_hook = "0.1.7"
js-sys = "0.3.72"
reqwest = "0.12.9"
serde = { version = "1.0.214", features = ["derive"]}
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.45"
web-sys = { version = "0.3.72", features = ["Headers", "Request", "RequestInit", "RequestMode", "Response", "Window", "console"]}
